# suspended

./: .gitignore  .gitmodules  com.github.hezral.suspended.yml  flow.drawio  meson.build
data/: application.css  com.github.hezral.suspended.appdata.xml.in  com.github.hezral.suspended.desktop.in  com.github.hezral.suspended.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app_manager copy.py  app_manager.py  app_obj.py  conf_manager.py  main.py  meson.build  settings_view.py  suspended.gresource.xml  suspended.in  suspender_manager.py  thread_obj.py  upower_backend.py  utils.py  window.py  window.ui  workspaces_view.py  xsuspender_manager.py
